k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-knot
  labels:
    app.kubernetes.io/part-of: dns-knot
