k8s/90-dnsadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnsadmin
  namespace: dns-knot
spec:
  selector:
    app: dnsadmin
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
